# py-rename-exchange

./: .gitignore  .pre-commit-config.yaml  README.md  _rename_exchange.c  setup.cfg  setup.py  tox.ini
py_rename_exchange/: main.py
tests/: main_test.py
