[metadata]
name = py_rename_exchange
version = 1.0.0
description = this is a extension module for renameat2 with RENAME_EXCHANGE
long_description = file: README.md
long_description_content_type = text/markdown
url = needgit@github.com
author = Bryn Phillips
author_email = brynphillips1@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    py-rename-exchange-cli = py_rename_exchange.main:main
